--- a/fmi-avi-xmlmodel-iso19139-20070417/pom.xml
+++ b/fmi-avi-xmlmodel-iso19139-20070417/pom.xml
@@ -46,7 +46,7 @@
               provided by the project xmlmodel-gml32 (which depends on this project).
             -->
             <id>prune-gml32</id>
-            <phase>process-classes</phase>
+            <phase>prepare-package</phase>
             <goals>
               <goal>run</goal>
             </goals>
