--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -16,12 +14,20 @@
   <version>1.0-SNAPSHOT</version>
 
   <modules>
-    <module>fmi-avi-xmlmodel-gml32</module>
-    <module>fmi-avi-xmlmodel-iwxxm21</module>
     <module>fmi-avi-xmlmodel-xlink11</module>
     <module>fmi-avi-xmlmodel-xml-namespace2001</module>
     <module>fmi-avi-xmlmodel-iso19139-20070417</module>
+    <module>fmi-avi-xmlmodel-gml32</module>
+    <module>fmi-avi-xmlmodel-om20</module>
+    <module>fmi-avi-xmlmodel-sampling20</module>
+    <module>fmi-avi-xmlmodel-sampling-spatial20</module>
+    <module>fmi-avi-xmlmodel-aixm511-wx</module>
+    <module>fmi-avi-xmlmodel-wmo-metce2013</module>
+    <module>fmi-avi-xmlmodel-wmo-opm2013</module>
+    <module>fmi-avi-xmlmodel-iwxxm21</module>
   </modules>
+
+  
 
   <build>
     <pluginManagement>
@@ -45,7 +51,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
@@ -84,6 +90,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    
 
   </build>
 
