--- a/fmi-avi-xmlmodel-wmo-metce2013/pom.xml
+++ b/fmi-avi-xmlmodel-wmo-metce2013/pom.xml
@@ -9,7 +9,9 @@
   </parent>
   
   <artifactId>fmi-avi-xmlmodel-wmo-metce2013</artifactId>
-
+  <scm>
+    <developerConnection>${scm.root}/${project.artifactId}.git/</developerConnection>
+  </scm>
   <dependencies>
    <dependency>
       <groupId>fi.fmi.xmlmodel</groupId>
