--- a/fmi-avi-xmlmodel-sampling20/pom.xml
+++ b/fmi-avi-xmlmodel-sampling20/pom.xml
@@ -6,7 +6,9 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>fmi-avi-xmlmodel-sampling20</artifactId>
-  
+  <scm>
+    <developerConnection>${scm.root}/${project.artifactId}.git/</developerConnection>
+  </scm>
   <dependencies>
     <dependency>
       <groupId>fi.fmi.xmlmodel</groupId>
