--- a/fmi-avi-xmlmodel-xlink11/pom.xml
+++ b/fmi-avi-xmlmodel-xlink11/pom.xml
@@ -10,9 +10,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>fmi-avi-xmlmodel-xlink11</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-
+  <scm>
+    <developerConnection>${scm.root}/${project.artifactId}.git/</developerConnection>
+  </scm>
+  
   <dependencies>
     <dependency>
       <groupId>fi.fmi.xmlmodel</groupId>
