--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,9 @@
     <module>fmi-avi-xmlmodel-fmiavi20170704</module>
 
   </modules>
-  
+  <properties>
+    <scm-url>scm:git:https://github.com/${github-repo-owner}/${project.artifactId}.git</scm-url>
+  </properties>
   <build>
     <pluginManagement>
       <plugins>
@@ -91,6 +93,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <!-- 
     <plugins>
       <plugin>
         <groupId>com.github.danielflower.mavenplugins</groupId>
@@ -102,7 +105,7 @@
            </releaseGoals>
         </configuration>
       </plugin>
-    </plugins>
+    </plugins> -->
 
   </build>
   
