--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>fi.fmi.xmlmodel</groupId>
   <artifactId>fmi-avi-xmlmodel</artifactId>
   <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <modules>
     <module>fmi-avi-xmlmodel-xlink11</module>
@@ -31,6 +31,7 @@
   </modules>
   <scm>
     <developerConnection>scm:git:https://github.com/${github-repo-owner}/${project.artifactId}.git</developerConnection>
+    <tag>fmi-avi-xmlmodel-1.0</tag>
   </scm>
   <build>
     <pluginManagement>
