--- a/fmi-avi-xmlmodel-aixm511-wx/pom.xml
+++ b/fmi-avi-xmlmodel-aixm511-wx/pom.xml
@@ -49,6 +49,32 @@
             </schemas>
           </configuration>
         </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <!-- Cleanup after XJC, the GMD stuff should not be generated here at all (by episode) -->
+            <id>prune-gml32-iso19139</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <echo message="Pruning generated ISO GMD and GML32 ObjectFactories..." />
+                <delete>
+                  <fileset dir="${project.basedir}/target/generated-sources/xjc/net/opengis/gml32" includes="ObjectFactory.java" />
+                  <fileset dir="${project.build.outputDirectory}/net/opengis/gml32" includes="ObjectFactory.class" />
+                  <fileset dir="${project.basedir}/target/generated-sources/xjc/org/iso19139/ogc2007/gmd" includes="ObjectFactory.java" />
+                  <fileset dir="${project.build.outputDirectory}/org/iso19139/ogc2007/gmd" includes="ObjectFactory.class" />
+                </delete>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       </plugins>
     </build>    
 </project>
