Replaced AIXM 5.1.1 weather profile version "a" with AIXM 5.1.1 weather profile version "b" made for IWXXM 3. Now the IWXXM 2.1.1 schema also depends on the "b" schema, which should be ok due to backward compatible changes. This solves the JAXB related issues with using duplicate bindings for the same AIXM 5.1.1 namespace schema types.

--- a/fmi-avi-xmlmodel-iwxxm30/pom.xml
+++ b/fmi-avi-xmlmodel-iwxxm30/pom.xml
@@ -96,8 +96,8 @@
                 <delete>
                   <fileset dir="${project.basedir}/target/generated-sources/xjc/net/opengis/gml32" includes="ObjectFactory.java" />
                   <fileset dir="${project.build.outputDirectory}/net/opengis/gml32" includes="ObjectFactory.class" />
-                  <fileset dir="${project.basedir}/target/generated-sources/xjc/aero/aixm511b" includes="ObjectFactory.java" />
-                  <fileset dir="${project.build.outputDirectory}/aero/aixm511b" includes="ObjectFactory.class" />
+                  <fileset dir="${project.basedir}/target/generated-sources/xjc/aero/aixm511" includes="ObjectFactory.java" />
+                  <fileset dir="${project.build.outputDirectory}/aero/aixm511" includes="ObjectFactory.class" />
                 </delete>
               </target>
             </configuration>
