Pass Maven's active proxy settings to XJC

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
             <useDependenciesAsEpisodes>true</useDependenciesAsEpisodes>
             <catalog>src/main/resources/catalog.cat</catalog>
             <strict>false</strict>
+            <useActiveProxyAsHttpproxy>true</useActiveProxyAsHttpproxy>
           </configuration>
           <executions>
             <execution>
