--- a/fmi-avi-xmlmodel-iwxxm30/pom.xml
+++ b/fmi-avi-xmlmodel-iwxxm30/pom.xml
@@ -111,7 +111,7 @@
         <configuration>
           <schematronDirectory>${basedir}/src/main/resources/</schematronDirectory>
           <schematronPattern>**/*.sch</schematronPattern>
-          <xsltDirectory>${build.outputDirectory}/schematron/xslt</xsltDirectory>
+          <xsltDirectory>${project.build.outputDirectory}/schematron/xslt</xsltDirectory>
           <xsltExtension>.xsl</xsltExtension>
         </configuration>
         <executions>
@@ -141,7 +141,7 @@
                 <goal>copy-resources</goal>
               </goals>
               <configuration>
-                <outputDirectory>${build.outputDirectory}/schematron/xslt</outputDirectory>
+                <outputDirectory>${project.build.outputDirectory}/schematron/xslt</outputDirectory>
                 <resources>
                   <resource>
                     <directory>${basedir}/src/main/resources/</directory>
