SDM-2704: Use release version of IWXXM 2025-2

--- a/fmi-avi-xmlmodel-iwxxm2025-2/pom.xml
+++ b/fmi-avi-xmlmodel-iwxxm2025-2/pom.xml
@@ -75,7 +75,7 @@
         <configuration>
           <schemas>
             <schema>
-              <url>https://schemas.wmo.int/iwxxm/2025-2RC2/iwxxm.xsd</url>
+              <url>https://schemas.wmo.int/iwxxm/2025-2/iwxxm.xsd</url>
             </schema>
           </schemas>
         </configuration>
